--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -19,11 +19,11 @@
     <string name="deleting_folder">Odstraňuje se složka \'%s\'</string>
     <string name="none">Žádný</string>
     <string name="label">Štítek</string>
-    <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
+    <string name="transparent">Průhledná</string>
+    <string name="transparent_color">Průhledná barva</string>
     <string name="select_a_different_color">Zvolit jinou barvu</string>
     <string name="download">Stáhnout</string>
-    <string name="notification">Notification</string>
+    <string name="notification">Oznámení</string>
     <string name="email">E-mail</string>
 
     <!-- Favorites -->
@@ -90,7 +90,7 @@
     <string name="moving_success">Soubory byly úspěšně přesunuty</string>
     <string name="moving_success_partial">Některé soubory se nepodařilo přesunout</string>
     <string name="copying_success_partial">Některé soubory se nepodařilo zkopírovat</string>
-    <string name="no_files_selected">Žádné soubory vybrány</string>
+    <string name="no_files_selected">Nejsou vybrány žádné soubory</string>
     <string name="saving">Ukládání…</string>
     <string name="could_not_create_folder">Nepodařilo se vytvořit složku %s</string>
     <string name="could_not_create_file">Nepodařilo se vytvořit soubor %s</string>
@@ -206,11 +206,11 @@
     <!-- Themes -->
     <string name="light_theme">Světlý</string>
     <string name="dark_theme">Tmavý</string>
-    <string name="solarized">Solarizovaná</string>
-    <string name="dark_red">Dark red</string>
-    <string name="black_white">Black &amp; White</string>
+    <string name="solarized">Solarizovaný</string>
+    <string name="dark_red">Tmavě červený</string>
+    <string name="black_white">Černobílý</string>
     <string name="custom">Vlastní</string>
-    <string name="shared">Sdílená</string>
+    <string name="shared">Sdílený</string>
 
     <!-- What's new -->
     <string name="whats_new">Co je nového</string>
@@ -258,7 +258,7 @@
     <string name="move_to_recycle_bin_confirmation">Opravdu chcete přesunout %s do koše?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
     <string name="are_you_sure_delete">Opravdu chcete smazat tuto položku</string>
     <string name="are_you_sure_recycle_bin">Opravdu chcete přesunout tuto položku do koše?</string>
-    <string name="do_not_ask_again">Do not ask again in this session</string>
+    <string name="do_not_ask_again">V této relaci se znovu neptat</string>
     <string name="yes">Ano</string>
     <string name="no">Ne</string>
     <string name="maybe">Možná</string>
@@ -296,15 +296,15 @@
     <string name="yesterday">Včera</string>
     <string name="today">Dnes</string>
     <string name="tomorrow">Zítra</string>
-    <string name="seconds_raw">vteřiny</string>
+    <string name="seconds_raw">sekundy</string>
     <string name="minutes_raw">minuty</string>
     <string name="hours_raw">hodiny</string>
     <string name="days_raw">dny</string>
 
     <plurals name="seconds">
-        <item quantity="one">%d vteřina</item>
-        <item quantity="few">%d vteřiny</item>
-        <item quantity="other">%d vteřin</item>
+        <item quantity="one">%d sekunda</item>
+        <item quantity="few">%d sekundy</item>
+        <item quantity="other">%d sekund</item>
     </plurals>
     <plurals name="minutes">
         <item quantity="one">%d minuta</item>
@@ -339,9 +339,9 @@
 
     <!-- For example: I will be there in 5 minutes -->
     <plurals name="in_seconds">
-        <item quantity="one">%d vteřinu</item>
-        <item quantity="few">%d vteřiny</item>
-        <item quantity="other">%d vteřin</item>
+        <item quantity="one">%d sekundu</item>
+        <item quantity="few">%d sekundy</item>
+        <item quantity="other">%d sekund</item>
     </plurals>
     <plurals name="in_minutes">
         <item quantity="one">%d minutu</item>
@@ -376,14 +376,14 @@
 
     <!-- For example: Event reminder: 3 minutes before -->
     <plurals name="seconds_before">
-        <item quantity="one">%d vteřinu před</item>
-        <item quantity="few">%d vteřiny před</item>
-        <item quantity="other">%d vteřin před</item>
+        <item quantity="one">%d sekundu před</item>
+        <item quantity="few">%d sekundy před</item>
+        <item quantity="other">%d sekund před</item>
     </plurals>
     <plurals name="minutes_before">
         <item quantity="one">%d minutu před</item>
         <item quantity="few">%d minuty před</item>
-        <item quantity="other">%d minuty před</item>
+        <item quantity="other">%d minut před</item>
     </plurals>
     <plurals name="hours_before">
         <item quantity="one">%d hodinu před</item>
@@ -408,14 +408,14 @@
     <plurals name="years_before">
         <item quantity="one">%d rok před</item>
         <item quantity="few">%d roky před</item>
-        <item quantity="other">%d let před</item>
+        <item quantity="other">%d roků před</item>
     </plurals>
 
     <!-- For example: Postpone reminder by 3 minutes -->
     <plurals name="by_seconds">
-        <item quantity="one">%d vteřinu</item>
-        <item quantity="few">%d vteřiny</item>
-        <item quantity="other">%d vteřin</item>
+        <item quantity="one">%d sekundu</item>
+        <item quantity="few">%d sekundy</item>
+        <item quantity="other">%d sekund</item>
     </plurals>
     <plurals name="by_minutes">
         <item quantity="one">%d minutu</item>
@@ -445,7 +445,7 @@
     <plurals name="by_years">
         <item quantity="one">%d rok</item>
         <item quantity="few">%d roky</item>
-        <item quantity="other">%d let</item>
+        <item quantity="other">%d roků</item>
     </plurals>
 
     <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
@@ -453,7 +453,7 @@
     <string name="reminder_triggers_in">Zbývající čas do zobrazení připomínky:\n%s</string>
     <string name="alarm_warning">Před spoléháním se na budík se prosím ujistěte, že funguje správně. Některá systémová omezení spojená se zvýšením výdrže baterie mohou způsobovat problémy.</string>
     <string name="reminder_warning">Před spoléháním se na připomínky se prosím ujistěte, že fungují správně. Některá systémová omezení spojená se zvýšením výdrže baterie mohou způsobovat problémy.</string>
-    <string name="notifications_disabled">Oznámení této aplikace jsou vypnuty. Prosím přejděte do nastavení svého zařízení pro jejich povolení.</string>
+    <string name="notifications_disabled">Oznámení této aplikace jsou vypnutá. Prosím přejděte do nastavení svého zařízení pro jejich povolení.</string>
 
     <!-- Alarms -->
     <string name="alarm">Budík</string>
@@ -650,7 +650,7 @@
             Zdravím,<br><br>
             pouze bych vám chtěl oznámit, že byla nedávno uveřejněna nová aplikace:<br><br>
             <a href="%1$s">%2$s</a><br><br>
-            Stáhnete ji ťuknuťím na název.<br><br>
+            Stáhnete ji klepnutím na název.<br><br>
             Děkuji
         ]]>
     </string>
@@ -668,12 +668,12 @@
     <string name="faq_1_text_commons">Je velmi pravděpodobné, že jste aplikaci přesunuli na SD kartu. Jde o omezení systému Android, které v takovém případě skryje widget dané aplikace.
         Jediným řešením je přesunutí aplikace zpět do interního úložiště skrze nastavení vašeho zařízení.</string>
     <string name="faq_2_title_commons">Chtěl bych vás podpořit, ale nemohu peněžně. Mohu vám pomoci i jiným způsobem?</string>
-    <string name="faq_2_text_commons">Ano, samozřejmě. Např. doporučením aplikací mezi známými či konstruktivní odezvou a hodnocením. Také můžete pomoci s překladem do nových jazyků, nebo jen upravit stávající.
+    <string name="faq_2_text_commons">Ano, samozřejmě. Např. doporučením aplikací mezi známými, či konstruktivní odezvou a hodnocením. Také můžete pomoci s překladem do nových jazyků, nebo jen upravit stávající.
         Návod naleznete na https://github.com/SimpleMobileTools/General-Discussion , nebo mi napište na hello@simplemobiletools.com pokud potřebujete pomoc.</string>
     <string name="faq_3_title_commons">Nechtěně jsem smazal některé soubory, jak je mohu obnovit?</string>
     <string name="faq_3_text_commons">Bohužel, nijak. Soubory jsou mazány ihned po potvrzení, není zde dostupný žádný koš.</string>
     <string name="faq_4_title_commons">Nelíbí se mi barvy widgetu, mohu je změnit?</string>
-    <string name="faq_4_text_commons">Ano, po přidání widgetu na domovskou obrazovku se zobrazí obrazovka s konfigurací. Ťuknutím na barevné čtverečky v levém dolním rohu můžete navolit nové barvy. Tažením posuvníku můžete upravit i průhlednost.</string>
+    <string name="faq_4_text_commons">Ano, po přidání widgetu na domovskou obrazovku se zobrazí obrazovka s konfigurací. Klepnutím na barevné čtverečky v levém dolním rohu můžete navolit nové barvy. Tažením posuvníku můžete upravit i průhlednost.</string>
     <string name="faq_5_title_commons">Mohu nějakým způsobem obnovit smazané soubory?</string>
     <string name="faq_5_text_commons">Pokud byly skutečně smazány, bohužel nijak. Ve výchozím nastavení je však povolen koš, díky kterému jsou soubory pouze přesunuty do něj, namísto okamžitého vymazání.</string>
     <string name="faq_6_title_commons">Ikona aplikace zmizela z domovské obrazovky. Co s tím?</string>
@@ -704,7 +704,7 @@
     <string name="gif_drawable_title">Gif Drawable (zobrazování GIFů)</string>
     <string name="autofittextview_title">AutoFitTextView (změna velikosti textu)</string>
     <string name="robolectric_title">Robolectric (framework pro testování)</string>
-    <string name="espresso_title">Espresso (pomocním pro testování)</string>
+    <string name="espresso_title">Espresso (pomocník pro testování)</string>
     <string name="gson_title">Gson (analyzátor JSON)</string>
     <string name="leak_canary_title">Leak Canary (detekce úniků paměti)</string>
     <string name="number_picker_title">Number Picker (upravitelné vybírání čísel)</string>
