adding some indicator fast scroll related licenses

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -673,6 +673,7 @@
     <string name="sanselan_title">أباتشي سانسيلان (قراءة البيانات الوصفية للصور)</string>
     <string name="filters_title">فلاتر الصور</string>
     <string name="gesture_views_title">الصور القابلة للتكبير</string>
+    <string name="indicator_fast_scroll_title">Indicator Fast Scroll (letters on scrollbar)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">لم يعد يجري العمل عليه: لم يعد هذا الإصدار من التطبيق يجري العمل عليه، قم بالحصول على الإصدار الـ Pro على https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
