--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -680,6 +680,7 @@
     <string name="sanselan_title">Apache Sanselan (Lector de metadatos de imagen)</string>
     <string name="filters_title">Android Photo Filters (Filtros de imagen)</string>
     <string name="gesture_views_title">Gesture Views (Imágenes con zoom)</string>
+    <string name="indicator_fast_scroll_title">Indicator Fast Scroll (letters on scrollbar)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">OBSOLETO: Esta versión de la aplicación ya no es mantenida, obtén la versión Pro en https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
