--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -744,6 +744,7 @@
     <string name="sanselan_title">Apache Sanselan (branje metapodatkov slik)</string>
     <string name="filters_title">Android Photo Filters (filtri za slike)</string>
     <string name="gesture_views_title">Gesture Views (povečljive slike)</string>
+    <string name="indicator_fast_scroll_title">Indicator Fast Scroll (letters on scrollbar)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">ZASTARELO: Ta verzija aplikacije se ne vzdržuje več, pridobite si Pro verzijo na https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
