--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -679,6 +679,7 @@
     <string name="sanselan_title">Apache Sanselan (görüntü meta verileri okuma)</string>
     <string name="filters_title">Android Photo Filters (görüntü filtreleri)</string>
     <string name="gesture_views_title">Gesture Views (yakınlaştırılabilir görüntüler)</string>
+    <string name="indicator_fast_scroll_title">Indicator Fast Scroll (letters on scrollbar)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">Kullanımdan kaldırıldı: Uygulamanın bu sürümü artık sağlanmıyor, Pro sürümünü şuradan indirin: https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
