--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -803,6 +803,7 @@
     <string name="sanselan_title">Apache Sanselan (darllen metadata delweddau)</string>
     <string name="filters_title">Android Photo Filters (hidlyddion delweddau)</string>
     <string name="gesture_views_title">Gesture Views (delweddau chwyddadwy)</string>
+    <string name="indicator_fast_scroll_title">Indicator Fast Scroll (letters on scrollbar)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">DEPRECATED: This version of the app is no longer maintained, get the Pro version at https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
