--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -680,6 +680,7 @@
     <string name="sanselan_title">Apache Sanselan (lettura metadati immagini)</string>
     <string name="filters_title">Android Photo Filters (filtri immagine)</string>
     <string name="gesture_views_title">Gesture Views (immagini ingrandibili)</string>
+    <string name="indicator_fast_scroll_title">Indicator Fast Scroll (letters on scrollbar)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">DEPRECATA: Questa versione dell\'app non è più supportata, ottieni la versione Pro a https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
