--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -645,6 +645,7 @@
     <string name="sanselan_title">Apache Sanselan (이미지 메타데이터 읽기)</string>
     <string name="filters_title">Android Photo Filters (이미지 필터)</string>
     <string name="gesture_views_title">Gesture Views (확대 가능한 이미지)</string>
+    <string name="indicator_fast_scroll_title">Indicator Fast Scroll (letters on scrollbar)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">구버전 경고: 이 버전의 앱은 더이상 관리되지 않습니다. Pro 버전을 설치해 주세요: https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
