--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -678,6 +678,7 @@
     <string name="sanselan_title">Apache Sanselan (leitura de metadados de imagem)</string>
     <string name="filters_title">Android Photo Filters (filtros de imagem)</string>
     <string name="gesture_views_title">Gesture Views (zoom para imagens)</string>
+    <string name="indicator_fast_scroll_title">Indicator Fast Scroll (letters on scrollbar)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">OBSOLETO: Esta versão do app não recebe mais atualizações. Por favor obtenha a versão Pro em https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
