--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -713,6 +713,7 @@
     <string name="sanselan_title">Apache Sanselan (чтение метаданных изображений)</string>
     <string name="filters_title">Android Photo Filters (фильтры изображений)</string>
     <string name="gesture_views_title">Gesture Views (масштабирование изображений)</string>
+    <string name="indicator_fast_scroll_title">Indicator Fast Scroll (letters on scrollbar)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">УСТАРЕВШЕЕ: данная версия приложения больше не поддерживается, переходите на версию Pro https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
