--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -713,6 +713,7 @@
     <string name="sanselan_title">Apache Sanselan (čítanie metadát obrázkov)</string>
     <string name="filters_title">Android Photo Filters (filtre obrázkov)</string>
     <string name="gesture_views_title">Gesture Views (priblížiteľné obrázky)</string>
+    <string name="indicator_fast_scroll_title">Indicator Fast Scroll (písmená na posuvníku)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">ZASTARALÁ: Táto verzia aplikácie už nie je podporovaná. Stiahnite si Pro verziu na https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
