--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -677,6 +677,7 @@
     <string name="sanselan_title">Apache Sanselan (исчитавање мета података слика)</string>
     <string name="filters_title">Android Photo Filters (филтери за слике)</string>
     <string name="gesture_views_title">Gesture Views (зумирање слика)</string>
+    <string name="indicator_fast_scroll_title">Indicator Fast Scroll (letters on scrollbar)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">DEPRECATED: This version of the app is no longer maintained, get the Pro version at https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
