--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -680,6 +680,7 @@
     <string name="sanselan_title">Apache Sanselan (читання метаданих зображень)</string>
     <string name="filters_title">Android Photo Filters (фільтри зображень)</string>
     <string name="gesture_views_title">Gesture Views (масштабування зображень)</string>
+    <string name="indicator_fast_scroll_title">Indicator Fast Scroll (letters on scrollbar)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">Застаріла: Ця версія додатка більше не підтримується, встановіть версію Pro за адресою https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
