--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -647,6 +647,7 @@
     <string name="sanselan_title">Apache Sanselan（讀取圖片詮釋資料）</string>
     <string name="filters_title">Android Photo Filters（圖片過濾器）</string>
     <string name="gesture_views_title">Gesture Views (可縮放的圖片)</string>
+    <string name="indicator_fast_scroll_title">Indicator Fast Scroll (letters on scrollbar)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">已捨棄: 這版本的應用程式不再維護，在這取得專業版  https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
