replace "More apps" by "More apps from us" at the About section

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -580,6 +580,7 @@
     <string name="email_label">أرسل ملاحظاتك أو اقتراحاتك إلى</string>
     <string name="upgrade_to_pro">الترقية إلى Pro</string>
     <string name="more_apps_underlined"><u>المزيد من التطبيقات</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>تراخيص الجهات الخارجية</u></string>
     <string name="invite_friends_underlined"><u>دعوة الأصدقاء</u></string>
     <string name="share_text">مهلاً, تعال تحقق من %1$s فى %2$s</string>
