--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -547,6 +547,7 @@
     <string name="email_label">피드백 또는 제안 요청</string>
     <string name="upgrade_to_pro">Pro버전으로 업데이트</string>
     <string name="more_apps_underlined"><u>앱 더보기</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>서드파티 라이선스</u></string>
     <string name="invite_friends_underlined"><u>친구에게 공유</u></string>
     <string name="share_text">%1$s 앱을 다운받으세요. %2$s</string>
