--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -615,6 +615,7 @@
     <string name="email_label">Odozvu a návrhy posielajte na</string>
     <string name="upgrade_to_pro">Stiahnuť Pro verziu</string>
     <string name="more_apps_underlined"><u>Viac aplikácií</u></string>
+    <string name="more_apps_from_us_underlined"><u>Viac aplikácií od nás</u></string>
     <string name="third_party_licences_underlined"><u>Licencie tretích strán</u></string>
     <string name="invite_friends_underlined"><u>Pozvať priateľov</u></string>
     <string name="share_text">Ahoj, skús %1$s na %2$s</string>
