--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -581,6 +581,7 @@
     <string name="email_label">Пошаљите ваше повратне информације или сугестије на</string>
     <string name="upgrade_to_pro">Унапредите у професионалну верзију</string>
     <string name="more_apps_underlined"><u>Више апликација</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Лиценце од трећих страна</u></string>
     <string name="invite_friends_underlined"><u>Позовите пријатеље</u></string>
     <string name="share_text">Посетите %1$s на %2$s</string>
