--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -582,6 +582,7 @@
     <string name="email_label">Надсилайте ваші відгуки і пропозиції до</string>
     <string name="upgrade_to_pro">Оновити до версії Pro</string>
     <string name="more_apps_underlined"><u>Більше додатків</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Ліцензії третіх сторін</u></string>
     <string name="invite_friends_underlined"><u>Запропонувати друзям</u></string>
     <string name="share_text">Спробуй %1$s за посиланням %2$s</string>
