--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -582,6 +582,7 @@
     <string name="email_label">Gửi phản hồi hoặc đề xuất của bạn tới</string>
     <string name="upgrade_to_pro">Nâng cấp lên Pro</string>
     <string name="more_apps_underlined"><u>Các ứng dụng khác</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Giấy phép bên thứ ba</u></string>
     <string name="invite_friends_underlined"><u>Mời bạn bè</u></string>
     <string name="share_text">Xin chào, hãy kiểm tra %1$s tại %2$s</string>
