--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -582,6 +582,7 @@
     <string name="email_label">Envia els teus comentaris o suggeriments a</string>
     <string name="upgrade_to_pro">Actualitza a pro</string>
     <string name="more_apps_underlined"><u>Més aplicacions</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Llicències de tercers</u></string>
     <string name="invite_friends_underlined"><u>Convida a amics</u></string>
     <string name="share_text">Hola, vine i mira %1$s a %2$s</string>
