--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -706,6 +706,7 @@
     <string name="email_label">Anfona dy adborth neu awgrymiadau at</string>
     <string name="upgrade_to_pro">Uwchraddio i Pro</string>
     <string name="more_apps_underlined"><u>Rhagor o apiau</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Trwyddedau trydydd parti</u></string>
     <string name="invite_friends_underlined"><u>Gwahodd ffrindiau</u></string>
     <string name="share_text">Hei, cymer olwg ar %1$s a %2$s</string>
