--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -582,6 +582,7 @@
     <string name="email_label">Send feedback og forslag til</string>
     <string name="upgrade_to_pro">Opgrader til Pro</string>
     <string name="more_apps_underlined"><u>Flere apps</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>3.-parts licencer</u></string>
     <string name="invite_friends_underlined"><u>Inviter venner</u></string>
     <string name="share_text">Hej, se %1$s på %2$s</string>
