--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -582,6 +582,7 @@
     <string name="email_label">Στείλτε τα σχόλιά σας ή τις προτάσεις σας</string>
     <string name="upgrade_to_pro">Αναβάθμιση στην Pro</string>
     <string name="more_apps_underlined"><u>Περισσότερες εφαρμογές</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Άδειες τρίτων</u></string>
     <string name="invite_friends_underlined"><u>Προσκαλέσετε φίλους</u></string>
     <string name="share_text">Έι, έλα να δεις %1$s στο %2$s</string>
