--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -582,6 +582,7 @@
     <string name="email_label">Lähetä palautteesi ja ehdotuksia osoitteeseen</string>
     <string name="upgrade_to_pro">Upgrade to Pro</string>
     <string name="more_apps_underlined"><u>Lisää sovelluksia</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Kolmansien osapuolien lisenssit</u></string>
     <string name="invite_friends_underlined"><u>Kutsu ystäviä</u></string>
     <string name="share_text">Hei, tutustu %1$s täällä %2$s</string>
