--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -582,6 +582,7 @@
     <string name="email_label">अपनी राय या सुझाव को भेजें</string>
     <string name="upgrade_to_pro">Upgrade to Pro</string>
     <string name="more_apps_underlined"><u>More apps</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u> तीसरी पार्टी के लाइसेंस </u></string>
     <string name="invite_friends_underlined"><u>मित्रो को आमन्त्रित करें</u></string>
     <string name="share_text">अरे, %1$s को %2$s पर देखो</string>
