--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -613,6 +613,7 @@
     <string name="email_label">Pošaljite nam povratne informacije ili prijedloge na</string>
     <string name="upgrade_to_pro">Upgrade to Pro</string>
     <string name="more_apps_underlined"><u>Više aplikacija</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Licence trećih strana</u></string>
     <string name="invite_friends_underlined"><u>Pozovite prijatelje</u></string>
     <string name="share_text">Hej, posjeti nas na %1$s u %2$s</string>
