--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -581,6 +581,7 @@
     <string name="email_label">Küldje el visszajelzését vagy javaslatait</string>
     <string name="upgrade_to_pro">Frissítés Pro verzióra</string>
     <string name="more_apps_underlined"><u>További alkalmazások</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Harmadik fél licencek</u></string>
     <string name="invite_friends_underlined"><u>Barátok meghívása</u></string>
     <string name="share_text">Gyere el %1$s - %2$s</string>
