--- a/commons/src/main/res/values-in/strings.xml
+++ b/commons/src/main/res/values-in/strings.xml
@@ -549,6 +549,7 @@
     <string name="email_label">Kirim umpanbalik atau saran ke</string>
     <string name="upgrade_to_pro">Tingkatkan ke Pro</string>
     <string name="more_apps_underlined"><u>Aplikasi lainnya</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Lisensi pihak ketiga</u></string>
     <string name="invite_friends_underlined"><u>Undang teman</u></string>
     <string name="share_text">Hai, cobalah %1$s di %2$s</string>
