--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -606,6 +606,7 @@
     <string name="email_label">Siųskite atsiliepimus ar pasiūlymus adresu</string>
     <string name="upgrade_to_pro">Upgrade to Pro</string>
     <string name="more_apps_underlined"><u>Daugiau programėlių</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Trečiųjų šalių licensijos</u></string>
     <string name="invite_friends_underlined"><u>Pakviesti draugus</u></string>
     <string name="share_text">Sveikas, pažiūrėk %1$s %2$s</string>
