--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -582,6 +582,7 @@
     <string name="email_label">Send tilbakemelding eller forslag til</string>
     <string name="upgrade_to_pro">Upgrade to Pro</string>
     <string name="more_apps_underlined"><u>Flere apper</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Tredjepartslisenser</u></string>
     <string name="invite_friends_underlined"><u>Inviter venner</u></string>
     <string name="share_text">Hey, come check out %1$s at %2$s</string>
