--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -615,6 +615,7 @@
     <string name="email_label">Отправить отзывы или предложения</string>
     <string name="upgrade_to_pro">Обновить до Pro</string>
     <string name="more_apps_underlined"><u>Больше простых приложений</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Лицензии третьих сторон</u></string>
     <string name="invite_friends_underlined"><u>Предложить другу</u></string>
     <string name="share_text">Попробуйте %1$s по ссылке %2$s</string>
