--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -647,6 +647,7 @@
     <string name="email_label">"Svoje predloge in povratne informacije pošljite na "</string>
     <string name="upgrade_to_pro">Nadgradi na Pro</string>
     <string name="more_apps_underlined"><u>Več aplikacij</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Licence tretjih oseb</u></string>
     <string name="invite_friends_underlined"><u>Povabi prijatelje</u></string>
     <string name="share_text">Oglejte si tudi %1$s na %2$s</string>
