--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -582,6 +582,7 @@
     <string name="email_label">Skicka dina synpunkter och förslag till</string>
     <string name="upgrade_to_pro">Uppgradera till Pro</string>
     <string name="more_apps_underlined"><u>Fler appar</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>Tredjepartslicenser</u></string>
     <string name="invite_friends_underlined"><u>Bjud in vänner</u></string>
     <string name="share_text">Hej, läs om %1$s på %2$s</string>
