--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -549,6 +549,7 @@
     <string name="email_label">发送反馈</string>
     <string name="upgrade_to_pro">升级到专业版</string>
     <string name="more_apps_underlined"><u>更多应用</u></string>
+    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
     <string name="third_party_licences_underlined"><u>开放源代码</u></string>
     <string name="invite_friends_underlined"><u>分享给好友</u></string>
     <string name="share_text">请前往 %2$s 看看我们的 %1$s 吧！</string>
