--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -582,7 +582,7 @@
     <string name="email_label">Stuur reacties of suggesties naar</string>
     <string name="upgrade_to_pro">Upgraden naar Pro-versie</string>
     <string name="more_apps_underlined"><u>Meer apps</u></string>
-    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
+    <string name="more_apps_from_us_underlined"><u>Meer apps van ons</u></string>
     <string name="third_party_licences_underlined"><u>Licenties van derden</u></string>
     <string name="invite_friends_underlined"><u>Vrienden uitnodigen</u></string>
     <string name="share_text">Hé, bekijk %1$s eens op %2$s</string>
