adding a new string about rating the app

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -611,6 +611,7 @@
     <string name="read_it">Llegiu</string>
     <string name="read_faq">Llegir Preguntes Freqüents</string>
     <string name="rate_us_prompt">Hola,\n\nsembla que esteu utilitzant aquesta aplicació ja des de fa molt de temps, i ho agraïm realment.\n\nSi us demanem un favor, cal que ens puntueu a Google Play. En realitat, això ens ajudarà molt.\n\nNo importa que decidiu, no tornareu a veure aquest missatge.\n\nGràcies</string>
+    <string name="rate_our_app">Rate our app please :)</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
