--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -644,6 +644,7 @@
     <string name="read_it">Prečítať</string>
     <string name="read_faq">Prečítať ČKO</string>
     <string name="rate_us_prompt">Zdravím,\n\nzdá sa, že už nejaký čas používate túto aplikáciu a to si veľmi ceníme.\n\nAk Vás môžeme požiadať o láskavosť, prosím ohodnoťte nás na Google Play. Naozaj by nám to veľmi pomohlo.\n\nBez ohľadu na to, ako sa rozhodnete, túto správu už neuvidíte.\n\nVďaka!</string>
+    <string name="rate_our_app">Prosím ohodnoťte našu aplikáciu :)</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
