--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -611,6 +611,7 @@
     <string name="read_it">Bitte lesen</string>
     <string name="read_faq">Read FAQ</string>
     <string name="rate_us_prompt">Hallo,\n\nes sieht so aus, als würdest du diese App schon einige Zeit benutzen und wir schätzen das sehr.\n\nWenn wir dich um einen Gefallen bitten können, bitte bewerte uns auf Google Play. Das würde uns wirklich sehr helfen.\n\nEgal wie du dich entscheidest, wirst du diese Nachricht nicht noch einmal bekommen.\n\nDanke!</string>
+    <string name="rate_our_app">Rate our app please :)</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
