adding a new Thank You string

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -610,6 +610,7 @@
     <string name="read_faq">Read FAQ</string>
     <string name="rate_us_prompt">مرحباً,\n\nيبدو أنك تستخدم هذا التطبيق لفترة طويلة بالفعل, ونحن نقدر ذلك حقاً.\n\nإذا استطعنا أن نطلب منك خدمة, فيرجى تقييمنا على Google Play. هذا سيساعدنا كثيراً \n\nوبغض النظر عن قرارك, لن تري هذه الرسالة مره أخري.\n\nشكراً!</string>
     <string name="rate_our_app">Rate our app please :)</string>
+    <string name="thank_you">Thank you</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
