--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -645,6 +645,7 @@
     <string name="read_faq">Прочитать FAQ</string>
     <string name="rate_us_prompt">Привет,\n\nпохоже, вы уже давно используете данное приложение и мы очень ценим это.\n\nНе могли бы вы оказать нам услугу и оценить его в Google Play? Это действительно очень нам поможет.\n\nНезависимо от вашего решения данное сообщение больше не появится.\n\nСпасибо!</string>
     <string name="rate_our_app">Оцените приложение, пожалуйста :)</string>
+    <string name="thank_you">Thank you</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
