--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -579,6 +579,7 @@
     <string name="read_faq">Read FAQ</string>
     <string name="rate_us_prompt">您好，\n\n看来您使用这个应用已经有一段时间了，我们真的很感激。\n\n如果您喜欢，请在Google Play上为我们评分。这对我们很有帮助。\n\n无论你做何决定，你都不会再看到这个消息了。\n\n感谢！</string>
     <string name="rate_our_app">Rate our app please :)</string>
+    <string name="thank_you">Thank you</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
